# ChatPlanner2023

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Event.cpp  Event.h  Makefile  README.md  RawInput.cpp  RawInput.h  Schedule.cpp  Schedule.h  a.out  cmake_install.cmake  googleTest.txt  log.txt  main.cpp  runAllTests  runProgram  test.cpp
